<resources>
    <string name="app_name">Recyclopedia</string>
    <string name="recyclopedia">Recyclopedia</string>
    <string name="welcome_page_title">Recyclopedia</string>
    <string name="welcome_page_message">Smart Waste Management</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="title_login_page">Login</string>
    <string name="loading_text">Loading..\n</string>
    <string name="message_login_page">Silahkan masukkan datamu untuk login ke dalam aplikasi.\n</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title_welcome_singup">Register</string>
    <string name="title_signup_page">Register with your username, email and password for sign up first!</string>
    <string name="name">Name</string>
    <string name="list_of_recyclable_items">List of Recyclable Items</string>
    <string name="logout">logout</string>
    <string name="text_idea">idea</string>
    <string name="text_instruction">instruction</string>
    <string name="confidence_score">Skor</string>
    <string name="fact_description">Plastic bottles are a type of waste made from synthetic polymers such as PET (polyethylene terephthalate), HDPE (high-density polyethylene), and other types of plastic. Plastic bottles are widely used as containers for beverages, cleaning products, and various other liquids due to their lightweight, strong, and durable nature. It takes a very long time for nature to break down or decompose plastic bottles, usually around 450 years or more. To reduce the volume of plastic bottle waste, plastic can be recycled. An interesting fact about plastic bottles: Recycling one ton of plastic can save approximately 5,774 kWh of energy, 16.3 barrels of oil, 30 cubic meters of landfill space, and reduce carbon dioxide emissions by 2 tons.</string>
</resources>